<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/panelbg_588_325"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/bundle_device_text"
            android:textColor="#000000"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_button_ok"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_button_cancel"
        android:layout_alignBottom="@+id/dialog_button_cancel"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/dialog_button_cancel"
        android:background="@drawable/btn_dialog"
        android:text="@string/sure" />

    <Button
        android:id="@+id/dialog_button_cancel"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/btn_dialog"
        android:text="@string/cancel" />

</RelativeLayout>