<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/root_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/bg_add_device_dlg"
        android:orientation="vertical"
        android:paddingBottom="15dip"
        android:paddingLeft="25dip"
        android:paddingRight="25dip"
        android:paddingTop="15dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="10dip"
                android:layout_height=".5dip"
                android:background="@drawable/h_white_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_device_lable_name"
                android:textColor="#6e6e6e"
                android:textSize="18sp" />

            <View
                android:layout_width="39dip"
                android:layout_height=".5dip"
                android:background="@drawable/h_white_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/selector_editext_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/popupwindow_adddevice_edt_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_input_box"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/config_device_hint_device"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="#6e6e6e"
                android:textColorHint="@color/edt_hint"
                android:textSize="15sp" />

            <Button
                android:id="@+id/popupwindow_adddevice_btn_clean"
                android:layout_width="15dip"
                android:layout_height="15dip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="20dip"
                android:background="@drawable/btn_x"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:paddingTop="10dip" >

            <View
                android:layout_width="10dip"
                android:layout_height=".5dip"
                android:background="@drawable/h_white_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_device_lable_wifi"
                android:textColor="#6e6e6e"
                android:textSize="18sp" />

            <View
                android:layout_width="39dip"
                android:layout_height=".5dip"
                android:background="@drawable/h_white_line" />
        </LinearLayout>

        <EditText
            android:id="@+id/popupwindow_adddevice_edt_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/selector_editext_bg"
            android:drawableLeft="@drawable/icowifi_45_45"
            android:drawablePadding="5dip"
            android:hint="@string/config_device_hint_ssid"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="#6e6e6e"
            android:textColorHint="@color/edt_hint"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/popupwindow_adddevice_edt_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/selector_editext_bg"
            android:drawableLeft="@drawable/icopassw_43_43"
            android:drawablePadding="5dip"
            android:hint="@string/config_device_hint_passwd"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="#6e6e6e"
            android:textColorHint="@color/edt_hint"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/selector_editext_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/popupwindow_adddevice_edt_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/icobarcode_45_45"
                android:drawablePadding="5dip"
                android:hint="@string/config_device_hint_active_code"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="#6e6e6e"
                android:textColorHint="@color/edt_hint"
                android:textSize="15sp" />

            <Button
                android:id="@+id/popupwindow_adddevice_btn_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ico_bcsearch" />

        </LinearLayout>

        <Button
            android:id="@+id/popupwindow_adddevice_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            android:background="@drawable/login_btn_selector"
            android:enabled="false"
            android:text="@string/activity_configdevice_lable_continue" />
    </LinearLayout>

</RelativeLayout>