<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="294dp"
    android:layout_height="162.5dp"
    android:layout_gravity="center"
    android:background="@drawable/panelbg_588_466" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="60dp"
        android:text="@string/appointment_delete_msg"
        android:textColor="@color/title_appoint_gray"
        android:textSize="19.5dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/cancel_view"
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_marginLeft="24.5dp"
            android:layout_marginTop="30dp" >

            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="115dp"
                android:layout_height="44dp"
                android:src="@drawable/button_230_88" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/appointment_cancel"
                android:textColor="@color/white"
                android:textSize="16.0dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirm_view"
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp" >

            <ImageView
                android:id="@+id/btn_confirm"
                android:layout_width="115dp"
                android:layout_height="44dp"
                android:src="@drawable/button_230_88" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/appointment_confirm"
                android:textColor="@color/white"
                android:textSize="16.0dp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>